<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.Overview">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activities.DashboardActivity"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/result_gif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="45dp"
                    android:contentDescription="@string/cat_gif" />

                <TextView
                    android:id="@+id/locality_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:gravity="start"
                    android:text="@string/wait"
                    android:textSize="24sp"
                    app:fontFamily="@font/geologica_bold"/>

                <TextView
                    android:id="@+id/temperature_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/geologica_regular" />

                <TextView
                    android:id="@+id/feels_like_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:fontFamily="@font/geologica_regular" />

                <TextView
                    android:id="@+id/result_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:fontFamily="@font/geologica_regular" />

                <TextView
                    android:id="@+id/tip_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:gravity="start"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    app:fontFamily="@font/geologica_regular" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="55dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/bubbles_color"
                    app:cardCornerRadius="20dp"
                    app:cardMaxElevation="12dp"
                    app:cardElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/details_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_marginTop="5dp"
                            android:gravity="start"
                            android:text="@string/details"
                            android:textSize="16sp"
                            app:fontFamily="@font/geologica_bold" />
                        <TableLayout
                            android:id="@+id/weather_table"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginHorizontal="5dp">

                            <TableRow>
                                <TextView
                                    android:id="@+id/wind_speed_title"
                                    android:text="@string/wind_speed"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_bold" />
                                <TextView
                                    android:id="@+id/wind_speed_textview"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_regular" />
                            </TableRow>

                            <TableRow>
                                <TextView
                                    android:id="@+id/pressure_title"
                                    android:text="@string/atmospheric_pressure"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_bold" />
                                <TextView
                                    android:id="@+id/pressure_textview"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_regular" />
                            </TableRow>
                            <TableRow>
                                <TextView
                                    android:id="@+id/humidity_title"
                                    android:text="@string/humidity"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_bold" />
                                <TextView
                                    android:id="@+id/humidity_textview"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_regular" />
                            </TableRow>
                            <TableRow>
                                <TextView
                                    android:id="@+id/sunrise_title"
                                    android:text="@string/sunrise"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_bold" />
                                <TextView
                                    android:id="@+id/sunrise_textview"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_regular" />
                            </TableRow>
                            <TableRow>
                                <TextView
                                    android:id="@+id/sunset_title"
                                    android:text="@string/sunset"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_bold" />
                                <TextView
                                    android:id="@+id/sunset_textview"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_regular" />
                            </TableRow>
                            <TableRow>
                                <TextView
                                    android:id="@+id/length_of_day_title"
                                    android:text="@string/length_of_day"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_bold" />
                                <TextView
                                    android:id="@+id/length_of_day_textview"
                                    android:padding="5dp"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    app:fontFamily="@font/geologica_regular" />
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/disclaimer_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/owm_disclaimer"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    app:fontFamily="@font/geologica_regular"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>