<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="55dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/bubbles_color"
    app:cardCornerRadius="20dp"
    app:cardMaxElevation="12dp"
    app:cardElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:fontFamily="@font/geologica_bold" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:fontFamily="@font/geologica_bold" />

        <TextView
            android:id="@+id/feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:fontFamily="@font/geologica_regular" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:fontFamily="@font/geologica_regular" />

        <TableLayout
            android:id="@+id/weather_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow>
                <TextView
                    android:id="@+id/wind_speed_title"
                    android:text="@string/wind_speed"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:fontFamily="@font/geologica_bold" />
                <TextView
                    android:id="@+id/wind_speed_textview"
                    android:padding="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:fontFamily="@font/geologica_regular" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/pressure_title"
                    android:text="@string/atmospheric_pressure"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:fontFamily="@font/geologica_bold" />
                <TextView
                    android:id="@+id/pressure_textview"
                    android:padding="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:fontFamily="@font/geologica_regular" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/humidity_title"
                    android:text="@string/humidity"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:fontFamily="@font/geologica_bold" />
                <TextView
                    android:id="@+id/humidity_textview"
                    android:padding="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:fontFamily="@font/geologica_regular" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>